# view-arc

./: .gitignore  Makefile  PUBLISHING.md  README.md  profile_tracking.py  profile_workload.py  pyproject.toml
.github/: copilot-instructions.md
docs/: ALLOW_MISSING_DIRECTION_PLAN.md  IMPLEMENTATION_PLAN.md  PERFORMANCE_ANALYSIS.md  STEP_6.2_SUMMARY.md  STEP_6.4_SUMMARY.md  STEP_7.2_IMPLEMENTATION.md  TRACKING_PLAN.md  obstacle_arc_spec.md
examples/: _visualize_event.py  attention_heatmap_demo.py  attention_tracking_analysis.py  attention_tracking_basic.py  attention_tracking_visualization.py  basic_usage.py  basic_usage_tracking.py  missing_direction_example.py  real_image_processing.py  real_image_processing_tracking.py  real_image_processing_tracking_full.py  result_aggregation_demo.py  simulated_store_session.py  streaming_mode_demo.py  visualization_demo.py  visualization_demo_tracking.py
images/: SVB_polygon_vertices.json  SVB_shop_floor.json
tests/: CONSOLIDATION_SUMMARY.md  test_api.py  test_api_integration.py  test_api_tracking.py  test_clipping.py  test_debug_scenarios.py  test_geometry.py  test_performance.py  test_sweep.py  test_tracking.py  test_tracking_algorithm.py  test_tracking_compute_attention.py  test_tracking_dataclasses.py  test_tracking_integration.py  test_tracking_performance.py  test_tracking_process_single_sample.py  test_tracking_results.py  test_tracking_sampling_assumptions.py  test_tracking_validation.py
view_arc/: __init__.py  api.py  clipping.py  debug.py  geometry.py  sweep.py  tracking.py  visualize.py
(+13 files in other folders)
